# tiny-assembly-interpreter

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Doxyfile.in  README.md  configure
examples/: change_case.tas  fibonacci.tas  is_leap.tas  max.tas
src/: CMakeLists.txt  asm_int.c  asm_int.h  main.c
src/execute/: execute.c  execute.h
src/map/: map.c  map.h
src/parser/: parser.c  parser.h
src/types/: instruction.h  registers.h
src/vector/: vector.c  vector.h
test/: CMakeLists.txt  map_test.c  test_main.c  vector_test.c
